# stanford-ctc

./: README.md
ctc/: Makefile  ctc.py  ctc_fast.pyx  dataLoader.py  editDistance.py  gradcheck.py  nnet.py  rnnet.py  run.sh  runNNet.py  runSwbd.sh  runTimit.sh  runTimitRNN.sh  setup.py  sgd.py  test.sh  testSwbd.sh  time_trials.py  timitLoader.py
ctc/notebooks/: visualize_ctc_train.ipynb
ctc_fast/: .gitignore  Makefile  brnnet.py  browse_runs.py  browse_runs_daemon.py  compareHyps.py  computeStats.py  ctc_fast.pyx  dataLoader.py  decode.sh  edAlign.py  kill_runs.py  param_spam.py  plot_results.py  reboot_runs.py  rnnet.py  runAll.py  runDecode.py  runDecode_new.py  runNNet.py  runSwbd.sh  runWSJ.sh  run_cfg.py  run_utils.py  runs_daemon.py  sgd.py  testSwbd.sh  testWSJ.sh  writeLikelihoods.py
ctc_fast/analysis-utils/: checkScores.py  checkkey.sh  decode.sh  writeLikelihoods.py
ctc_fast/clm/: clm_pp.py  interp_lms.sh  make_binary.sh  prep_text.py  sample_clm.py  srilm_cfg.sh
ctc_fast/cluster/: config.py  utils.py
ctc_fast/ctc-decoder-master/: .gitignore  (+13 more)
ctc_fast/decoder/fastdecode/: CMakeLists.txt  decoder.cpp  decoder.h  lm.cpp  prefix_tree.cpp  prefix_tree.h  test_decode.cpp
py-simple-hybrid/: README  dataLoader.py  gradcheck.py  nnet.py  runNNet.py  sgd.py
simmple-hybrid/: unit_loader.m  unit_write.m
simple-hybrid/: eval_dev.m  initialize_weights.m  params2stack.m  runMaster_spNet.m  spNetCostSlave.m  startMaster_spNet.m  svmNetCostSlave.m  unit_cost.m  unit_loader.m  unit_write.m
util/: build_pca.m  check_grad.m  covariance_stats.m  load_kaldi_data.m  load_kaldi_data_old.m  pca_project.m  pdf-phone-map.txt  pdf_to_phone.m  sets.int  view_phones.m  write_likelihoods.m
(+68 files in other folders)
